--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/svg": "^0.1.12",
     "gsap": "^3.5.1",
     "nuxt": "^2.0.0",
+    "nuxt-font-loader-strategy": "^1.1.2",
     "sass": "^1.32.0",
     "sass-loader": "^10.1.0",
     "smart-grid": "^2.1.2",
