--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maup",
   "version": "1.0.0",
-  "description": "My fantabulous Nuxt.js project",
+  "description": "Maup",
   "author": "Victor Biletskiy",
   "private": true,
   "scripts": {
@@ -25,7 +25,8 @@
     "smooth-scrollbar": "^8.5.3",
     "split-html-to-chars": "^1.0.5",
     "swiper": "5.3.7",
-    "vue-awesome-swiper": "^4.1.1"
+    "vue-awesome-swiper": "^4.1.1",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
