--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "split-html-to-chars": "^1.0.5",
     "swiper": "5.3.7",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-clipboard2": "^0.3.1",
+    "vue-notification": "^1.3.20",
     "vue-select": "^3.11.2",
+    "vue-youtube-embed": "^2.2.2",
     "vuejs-paginate": "^2.1.0",
     "vuelidate": "^0.7.6"
   },
