--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "smooth-scrollbar": "^8.5.3",
     "split-html-to-chars": "^1.0.5",
     "swiper": "5.3.7",
+    "vue-2-breadcrumbs": "^0.7.12",
     "vue-awesome-swiper": "^4.1.1",
     "vue-clipboard2": "^0.3.1",
     "vue-notification": "^1.3.20",
